# eve_pass

./: .gitignore  CLAUDE.md  Cargo.toml  PENDENCIAS.md
.github/workflows/: desktop-release.yml
apps/browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
apps/browser-extension/native-host/: com.evepass.host.json
apps/desktop/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/scripts/: README.md  gen-icon.mjs  gen-tray.mjs
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cache.rs  commands.rs  host.rs  lib.rs  main.rs  settings.rs  state.rs
apps/desktop/src/components/: AuthScreen.tsx  HostPairModal.tsx  ImportModal.tsx  ItemDetail.tsx  ItemForm.tsx  ItemList.tsx  MainWindow.tsx  Palette.tsx  PasswordGenerator.tsx  SettingsModal.tsx  ShareModal.tsx  Sidebar.tsx
apps/desktop/src/lib/: auth.ts  health.ts  import.ts  ipc.ts  supabase.ts  sync.ts
apps/desktop/src/state/: vault.tsx
apps/mobile/: README.md  package.json
apps/mobile/native/android/: BiometricVault.kt  EvepassAutofillService.kt
apps/mobile/react-native-evepass-core/: .gitignore  CONTRIBUTING.md  EvepassCore.podspec  LICENSE  README.md  package.json  react-native.config.js  tsconfig.json  ubrn.config.yaml
apps/mobile/react-native-evepass-core/.github/ISSUE_TEMPLATE/: config.yml
apps/mobile/react-native-evepass-core/.github/workflows/: ci.yml
apps/mobile/react-native-evepass-core/android/: CMakeLists.txt
apps/mobile/react-native-evepass-core/cpp/: EvepassCoreImpl.cpp  EvepassCoreImpl.h  react-native-evepass-core.cpp  react-native-evepass-core.h
apps/mobile/react-native-evepass-core/example/: Gemfile  app.json  metro.config.js  package.json
apps/mobile/react-native-evepass-core/example/android/: settings.gradle
apps/mobile/react-native-evepass-core/example/android/app/: build.gradle
apps/mobile/react-native-evepass-core/example/android/app/src/main/java/evepasscore/example/: MainActivity.kt  MainApplication.kt
apps/mobile/react-native-evepass-core/example/android/app/src/main/res/values/: strings.xml
apps/mobile/react-native-evepass-core/example/ios/: .gitignore  FASTLANE.md  Podfile
apps/mobile/react-native-evepass-core/example/ios/EvepassCoreExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
apps/mobile/react-native-evepass-core/example/ios/EvepassCoreExample.xcodeproj/: project.pbxproj
apps/mobile/react-native-evepass-core/example/ios/EvepassCoreExample.xcodeproj/xcshareddata/xcschemes/: EvepassCoreExample.xcscheme
apps/mobile/react-native-evepass-core/example/ios/fastlane/: .env.example  Appfile  Fastfile
apps/mobile/react-native-evepass-core/example/src/: App.tsx
apps/mobile/react-native-evepass-core/ios/: EvepassCore.h  EvepassCore.mm  OnLoad.mm
apps/mobile/react-native-evepass-core/src/: NativeEvepassCore.ts  index.tsx  multiply.native.tsx  multiply.tsx
apps/mobile/src/lib/: core.ts  vault.ts
apps/mobile/src/screens/: UnlockScreen.tsx  VaultScreen.tsx
cli/: Cargo.toml
cli/src/: main.rs  session.rs  supabase.rs
core/: Cargo.toml  uniffi.toml
core/src/: account.rs  aead.rs  collections.rs  envelope.rs  error.rs  folder.rs  generator.rs  health.rs  item.rs  kdf.rs  keypair.rs  keys.rs  lib.rs  login.rs  mobile.rs  passkey.rs  pq.rs  recovery.rs  totp.rs
docs/: DISTRIBUTION.md  EVEPass-Plano.md  PRD-EVEPass-Fase0.md  PRD-EVEPass-Fase1.md  PRD-EVEPass-Fase2.md  PRD-EVEPass-Fase3.md  PRD-EVEPass-Fase4.md  PRD-EVEPass-Fase5.md  STATUS.md
infra/supabase/: README.md  apply-all.sql
infra/supabase/migrations/: 0001_init.sql  0002_collections.sql  0003_collection_owner_members.sql
native-host/: Cargo.toml
native-host/src/: main.rs
scripts/: build-android.sh  build-ios.sh
