[package]
name = "evepass-desktop"
version = "0.1.0"
edition = "2021"
description = "EVEPass desktop app"
authors = ["EVEPass"]

[lib]
name = "evepass_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
evepass-core = { path = "../../../core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
getrandom = "0.2"

# Detach from the root Rust workspace so `cargo build` at the repo root stays
# focused on core+cli; the Tauri app builds via its own toolchain/CLI.
[workspace]
